--- a/recovery/root/init.recovery.sl8541e_1h10.rc
+++ b/recovery/root/init.recovery.sl8541e_1h10.rc
@@ -8,7 +8,54 @@ service gnss_download /system/bin/gnss_download
     group system
     oneshot
 
-on factorytest
+on init
+
+    # INIT
+    symlink /system/etc /etc
+    #symlink /system/vendor /vendor
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /system/etc/bluetooth /etc/bluetooth
+    # Create mount-point for ConfigFS USB gadgets
+    # Add standard gadget entries
+    mount configfs none /config
+    mkdir /config/usb_gadget/g1 0770 shell shell
+    write /config/usb_gadget/g1/idVendor 0x1782
+    write /config/usb_gadget/g1/idProduct 0x4d00
+    mkdir /config/usb_gadget/g1/strings/0x409 0770 shell shell
+    write /config/usb_gadget/g1/strings/0x409/serialnumber $ro.serialno
+    write /config/usb_gadget/g1/strings/0x409/manufacturer Spreadtrum
+    write /config/usb_gadget/g1/strings/0x409/product Spreadtrum Phone
+    mkdir /config/usb_gadget/g1/configs/b.1 0770 shell shell
+    mkdir /config/usb_gadget/g1/configs/b.1/strings/0x409 0770 shell shell
+    write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "Conf 1"
+    write /config/usb_gadget/g1/configs/b.1/MaxPower 120
+
+    # Create adb+ffs gadget function
+    mkdir /config/usb_gadget/g1/functions/ffs.adb 0770 shell shell
+    mkdir /dev/usb-ffs 0770 shell shell
+    mkdir /dev/usb-ffs/adb 0770 shell shell
+    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+
+    # Create MTP and PTP functions
+    mkdir /config/usb_gadget/g1/functions/mtp.gs0 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/ptp.gs1 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/rndis.gs4 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/vser.gs7 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/accessory.gs2 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/audio_source.gs3 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/midi.gs5 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs0 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs1 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs2 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs3 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs4 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs5 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs6 0770 shell shell
+    mkdir /config/usb_gadget/g1/functions/gser.gs7 0770 shell shell
+
+    write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "vser"
+    rm /config/usb_gadget/g1/configs/b.1/f1
+    symlink /config/usb_gadget/g1/functions/vser.gs7 /config/usb_gadget/g1/configs/b.1/f1
 
 on cali
     mkdir /data/gnss/ 0777 system system
