--- a/recovery/root/init.recovery.sl8541e_1h10.rc
+++ b/recovery/root/init.recovery.sl8541e_1h10.rc
@@ -13,7 +13,6 @@ on factorytest
 on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
-    setprop sys.usb.config adb,vser,gser
     # Create mount-point for ConfigFS USB gadgets
     # Add standard gadget entries
     mount configfs none /config
@@ -23,7 +22,7 @@ on init
     mkdir /config/usb_gadget/g1/strings/0x409 0770 shell shell
     write /config/usb_gadget/g1/strings/0x409/serialnumber $ro.serialno
     write /config/usb_gadget/g1/strings/0x409/manufacturer Spreadtrum
-    write /config/usb_gadget/g1/strings/0x409/product Spreadtrum Phone
+    write /config/usb_gadget/g1/strings/0x409/product SpreadtrumPhone
     mkdir /config/usb_gadget/g1/configs/b.1 0770 shell shell
     mkdir /config/usb_gadget/g1/configs/b.1/strings/0x409 0770 shell shell
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "Conf 1"
@@ -52,10 +51,6 @@ on init
     mkdir /config/usb_gadget/g1/functions/gser.gs6 0770 shell shell
     mkdir /config/usb_gadget/g1/functions/gser.gs7 0770 shell shell
 
-    write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "vser"
-    rm /config/usb_gadget/g1/configs/b.1/f1
-    symlink /config/usb_gadget/g1/functions/vser.gs7 /config/usb_gadget/g1/configs/b.1/f1
-
     write /config/usb_gadget/g1/idVendor 0x1782
     write /config/usb_gadget/g1/idProduct 0x5d06
     write /config/usb_gadget/g1/configs/b.1/strings/0x409/configuration "adb_vser_gser"
@@ -75,6 +70,7 @@ on init
     symlink /config/usb_gadget/g1/functions/vser.gs7 /config/usb_gadget/g1/configs/b.1/f2
     symlink /config/usb_gadget/g1/functions/gser.gs0 /config/usb_gadget/g1/configs/b.1/f3
 
+    setprop sys.usb.config mtp,adb
     write /config/usb_gadget/g1/UDC ${sys.usb.controller}
     start adbd
 
@@ -87,10 +83,9 @@ on boot
 
     setprop sys.usb.configfs 1
     setprop sys.usb.controller musb-hdrc.0.auto
-
-on property:ro.debuggable=1
     write /sys/module/smsg/parameters/debug_enable 1
     start adbd
+
 
 on cali
     mkdir /data/gnss/ 0777 system system
